--- a/rs/css/countdown.css
+++ b/rs/css/countdown.css
@@ -58,7 +58,7 @@ body {
 
 .footer {
   position: fixed;
-  bottom: 1.5rem;
+  bottom: 1.2rem;
   font-size: 1.5rem;
   width: 100%;
   text-align: center;
@@ -72,34 +72,34 @@ a {
 @media (max-width: 576px) {
   body {
     background-attachment: fixed;
-    padding-top: 4rem; }
+    padding-top: 1.5rem; }
 
   .hcenter {
     text-align: center; }
 
   .ht1 {
-    font-size: 4.5rem; }
+    font-size: 2.4rem; }
 
   .ht2 {
-    font-size: 4rem; }
+    font-size: 2.2rem; }
 
   .countdown {
-    margin: 1.5rem auto; }
+    margin: 0.4rem auto; }
 
   .ct {
     display: block;
-    width: 60%;
+    width: 40%;
     margin: 1rem auto;
-    text-align: center; }
+    text-align: center;
+    font-size: 2.5rem; }
     .ct:first-child {
       margin-left: auto; }
 
   .sdown {
-    text-align: center; }
+    text-align: center;
+    font-size: 2rem; }
 
   .footer {
-    position: inherit;
-    padding-bottom: 1.5rem;
-    font-size: 1.1rem; } }
+    font-size: 0.8rem; } }
 
 /*# sourceMappingURL=countdown.css.map */
