--- a/rs/css/main.css
+++ b/rs/css/main.css
@@ -70,6 +70,12 @@ body {
   background-size: cover;
   margin: -60px 0 0 -60px; }
 
+.logo {
+  font-weight: 500;
+  font-size: 22px;
+  letter-spacing: 1px;
+  font-family: 'Roboto', sans-serif; }
+
 /*======= Home =======*/
 .home {
   position: relative; }
