--- a/rs/css/main.scss
+++ b/rs/css/main.scss
@@ -35,9 +35,6 @@ body {
   top: 0;
 }
 
-.bg-img-1 {
-  background: url("../img/nutzboot_bg.png");
-}
 
 .bg-img-2 {
   background: url("../img/bg05.jpg");
@@ -50,6 +47,12 @@ body {
   width: 100%;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.bg-img-1 {
+  background: url("../img/nutzboot_bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .preloader {
